metacatui/src/main/webapp/css/metacatui-common.css
/* ... */
.expand-collapse .control.hidden{
	display: none;
}
.expand-collapse .spacer{
	margin-right: 10px;
}
/****************************************** 
************ Popup Login **************
******************************************/	

.nav.list-group > .list-group-item img.icon{
	width: 32px;
	height: auto;
	padding: 16px;
}
.scroll-y{
	overflow-y: scroll;
	-webkit-transform: translate3d(0,0,0); 
}
.inline input,
.inline label{
	float: left;
	display: inline;
	font-size: .9em;
}
.inline input{
	margin-right: 10px;
	margin-left: 30%;
}
#signInPopup .orcid-signin {
    margin-top: 10%;
}
.modal.container{
	padding: 20px 20px 40px 20px;
}
.modal .container{
	width: auto;
	margin-bottom: 20px;
}
.sign-in.modal .close {
    font-size: 2em;
}
/** The ORCID Sign In button **/
.orcid-btn{
	border: 1px solid #aacf14;
	border-radius: 4px;
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
	background-color: #FFF;
	padding: 15px 20px;
	color: #aacf14;
	text-decoration: none;
	margin-bottom: 10px;
	margin-top: 10px;
	display: inline-block;
	font-weight: bold;
}
.orcid-btn img {
    height: 1.5em;
    margin-right: 5px;
}
.orcid-btn:hover{
	background-color: #aacf14;
	transition: all 500ms;
	text-decoration: none;	
}
.orcid-btn:hover > span{
	color: #FFF;
	text-decoration: none;
}
/****************************************** 
** The Metadata and MetadataIndex View **
******************************************/	
#metadata-index-details .General .title,
#metadata-index-details .Other .text,
#metadata-index-details .Other .attributeDescription,
#metadata-index-details .Other .checksum,
#metadata-index-details .Other .dataUrl,
#metadata-index-details .Other .fileID,
#metadata-index-details .Other .size,
#metadata-index-details .Other .resourceMap,
#metadata-index-details .Other .presentationCat,
#metadata-index-details .Other .checksumAlgorithm,
#metadata-index-details .Other .author,
#metadata-index-details .Other .authorGivenName,
#metadata-index-details .Other .authorGivenNameSort,
#metadata-index-details .Other .authorSurName,	
#metadata-index-details .Other .authorSurNameSort,
#metadata-index-details .Other .authorLastName,
#metadata-index-details .Other .replicaVerifiedDate,
#metadata-index-details .Other .sku,
#metadata-index-details .Other .identifier,
#metadata-index-details .Other [class*=" prov_"],
#metadata-index-details .Other [class*=" geohash_"],
#metadata-index-details .Other [class^="geohash_"]
{
	display: none;
}
#metadata-index-details .entitydetails .size{
	display: inherit;
}
#Metadata  .citation,
#Content.no-stylesheet .citation,
#Metadata  > .container > .row-fluid > .citation,
#Metadata  > .container > .row-fluid > form > .citation{
	font-size: 1.4em;
	line-height: 1.7em;
	margin-bottom: 20px;
	border: 0px;
	box-shadow: none;
	-webkit-box-shadow: none;
	-moz-box-shadow: none;
	padding: 0px;
	background-color: transparent;
	display: block;
	font-weight: lighter;
	width: 100%;
	float: none;
}
#Metadata .citation-container.has-data-source,
#Content.no-stylesheet .citation-container.has-data-source,
#Metadata  > .container > .row-fluid > .citation-container.has-data-source,
#Metadata  > .container > .row-fluid > form > .citation-container.has-data-source{
	width: 83%;
	width: calc(100% - 130px);
	float: left;
	margin-bottom: 0px;
}
.citation-container.has-data-source {
    width: calc(100% - 130px);
    float: left;
}
#Metadata .citation .title,
#Content.no-stylesheet .citation .title{
	font-weight: bold;
}
.entitydetails.controls-well > .thumbnail{
	margin-left: 180px;
}
.citation ~ .inline-input-group > .input-append{
	float: right;
	margin-bottom: 0px;
}
.input-append.inline input[type='text']{
	margin-right: 0px;
	margin-left: 0px;
}
.metadata-view .controls-container{
	margin-bottom: 20px;
}
.metadata-view .controls-container > .controls{
	display: inline;
	float: left;
	margin-right: 20px;
}
.metadata-view .controls-container > .controls .inline-buttons{
	margin-top: 0px;
	margin-bottom: 0px;
	
}
#metadata-container > .alert-container{
	margin-top: 40px;
}
/* Hide the elements from the view service that we don't need to display */
#metadata-container .citation,
#metadata-container #downloadPackage{
	display: none;
}
/* Used in metadata view for metadata format types without stylesheet */
#Content > pre,
#Metadata pre {
    background-color: #EEE;
    color: #333;
    font-family: inherit;
    font-size: 1em;
}
#Content.no-stylesheet.container{ 
	width: 86%;
}
#Content.no-stylesheet.container > .breadcrumb{ 
	width: 100%;
	margin-top: 20px;
}
#Content.no-stylesheet > .breadcrumb~.citation{
	margin-top: 20px;
}

.attributeList > .row-fluid > .span2 {
  min-width: 130px;
  max-width: 150px;
  max-width: calc(165px - 2.127659574468085%);
}
.tab-content,
.row-fluid .tab-content.span10{
	width: 76%;
	width: calc(100% - 165px);
}
.attributeList a{
	text-overflow: ellipsis;
	overflow: hidden;
	white-space: nowrap;
	max-width: 100%;
}
.controls-well > .party{
	margin-bottom: 30px;
	border-bottom: 1px solid #DDD;
}
/* ---- Taxonomic range ---- */
.taxonomicCoverage .control-group{
   	margin-bottom: 20px;
    width: auto;
}
.taxonomicCoverage > .control-group{
    margin-left: 180px;
}
.taxonomicCoverage .control-label{
    width: auto;
    padding: 0px 10px;
}    
.taxonomicCoverage .controls > .control-group:nth-child(2n){
    margin-left: 107px;
}    
.taxonomicCoverage .control-label{
   color: #999;
}    
.taxonomicCoverage .controls {
	margin-left: 0px;
}
/**----------------------------------------**/
.metadata-view .citation{
	margin-bottom: 20px;
	display: inline-block;
	font-size: 1.2em;
	line-height: 1.5em;
}
.citation-container + .data-source{
  max-width: 125px;
  display: inline-block;
  float: right;
  margin-bottom: 10px;
}
.metadata-controls-container .info-icons{
	display: inline-block;
	padding-left: 20px;
	font-size: 1.2em;
	top: 5px;
    position: relative;
}
.metadata-controls-container{
	position: relative;
}
/* ... */

